// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/menu-items/MenuItemForm Default Default 1`] = `
<div
  class="container white"
>
  <div
    class="ff-menu-item__form"
  >
    <h3
      class="grey--text font-weight-bold"
    >
      
    Add menu new item
  
    </h3>
     
    <!---->
     
    <div
      class="layout"
    >
      <div
        class="flex px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="title"
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        servings
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="cost"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Item description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  data-vv-name="description"
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <button
        class="white--text v-btn v-btn--depressed theme--light grey"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save
    
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemForm Default Loading 1`] = `
<div
  class="container white"
>
  <div
    class="ff-menu-item__form"
  >
    <h3
      class="grey--text font-weight-bold"
    >
      
    Add menu new item
  
    </h3>
     
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      class="v-progress-linear"
      role="progressbar"
      style="height: 7px;"
    >
      <div
        class="v-progress-linear__background primary"
        style="height: 7px; opacity: 0.3; width: 100%;"
      />
      <div
        class="v-progress-linear__bar"
      >
        <div
          class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
        >
          <div
            class="v-progress-linear__bar__indeterminate long primary"
          />
          <div
            class="v-progress-linear__bar__indeterminate short primary"
          />
        </div>
        <!---->
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="title"
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        servings
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="cost"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Item description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  data-vv-name="description"
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <button
        class="white--text v-btn v-btn--depressed theme--light grey"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--loader v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save
    
        </div>
        <span
          class="v-btn__loading"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            class="v-progress-circular v-progress-circular--indeterminate"
            role="progressbar"
            style="height: 23px; width: 23px;"
          >
            <svg
              style="transform: rotate(0deg);"
              viewBox="21.904761904761905 21.904761904761905 43.80952380952381 43.80952380952381"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                class="v-progress-circular__overlay"
                cx="43.80952380952381"
                cy="43.80952380952381"
                fill="transparent"
                r="20"
                stroke-dasharray="125.664"
                stroke-dashoffset="125.66370614359172px"
                stroke-width="3.8095238095238093"
              />
            </svg>
            <div
              class="v-progress-circular__info"
            />
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemForm Default WithData 1`] = `
<div
  class="container white"
>
  <div
    class="ff-menu-item__form"
  >
    <h3
      class="grey--text font-weight-bold"
    >
      
    Add menu new item
  
    </h3>
     
    <!---->
     
    <div
      class="layout"
    >
      <div
        class="flex px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="title"
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        servings
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="cost"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Item description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  data-vv-name="description"
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <button
        class="white--text v-btn v-btn--depressed theme--light grey"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save
    
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemForm WithServings 1`] = `
<div
  class="container white"
>
  <div
    class="ff-menu-item__form"
  >
    <h3
      class="grey--text font-weight-bold"
    >
      
    Add menu new item
  
    </h3>
     
    <!---->
     
    <div
      class="layout"
    >
      <div
        class="flex px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="title"
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        servings
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="cost"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Item description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  data-vv-name="description"
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <button
        class="white--text v-btn v-btn--depressed theme--light grey"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save
    
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemForm WithoutServings 1`] = `
<div
  class="container white"
>
  <div
    class="ff-menu-item__form"
  >
    <h3
      class="grey--text font-weight-bold"
    >
      
    Add menu new item
  
    </h3>
     
    <!---->
     
    <div
      class="layout"
    >
      <div
        class="flex px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Item Title
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="title"
                  placeholder="Enter menu item title"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <div
        class="flex xs2 px-2"
      >
        <div
          class="mb-2 text-uppercase grey--text font-weight-bold"
        >
          
        Cost
      
        </div>
         
        <div
          class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <input
                  data-vv-name="cost"
                  type="text"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <div
                  class="v-messages__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="layout"
    >
      <div
        class="flex xs12 px-2"
      >
        <div
          class="text-uppercase grey--text font-weight-bold"
        >
          
        Item description
      
        </div>
         
        <div
          class="v-input v-textarea v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-input--is-label-active v-input--is-dirty theme--light"
        >
          <div
            class="v-input__control"
          >
            <div
              class="v-input__slot white"
            >
              <div
                class="v-text-field__slot"
              >
                <textarea
                  data-vv-name="description"
                  rows="5"
                />
              </div>
            </div>
            <div
              class="v-text-field__details"
            >
              <div
                class="v-messages theme--light"
              >
                <span
                  class="v-messages__wrapper"
                  name="message-transition"
                  tag="div"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <div>
      <button
        class="white--text v-btn v-btn--depressed theme--light grey"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Cancel
    
        </div>
      </button>
       
      <button
        class="v-btn v-btn--depressed theme--light primary"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Save
    
        </div>
      </button>
    </div>
  </div>
</div>
`;
